[gd_scene load_steps=3 format=3 uid="uid://cax3trhixkmnx"]

[ext_resource type="Script" uid="uid://bgmw47a6ssov1" path="res://addons/version_control/assets/version_control_dock.gd" id="1_5431i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t3l2x"]

[node name="VersionControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5431i")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_t3l2x")

[node name="Major" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Major"]
layout_mode = 2
text = "Major -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Major"]
layout_mode = 2
size_flags_horizontal = 4
rounded = true
alignment = 1

[node name="Minor" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Minor"]
layout_mode = 2
text = "Minor -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Minor"]
layout_mode = 2
size_flags_horizontal = 4
rounded = true
alignment = 1

[node name="Patch" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Patch"]
layout_mode = 2
text = "Patch -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Patch"]
layout_mode = 2
size_flags_horizontal = 4
value = 3.0
rounded = true
alignment = 1

[node name="VersionLabel" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.5882353)
layout_mode = 2
text = "Version: 0.0.3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
placeholder_text = "Commit Message"
wrap_mode = 1

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "  Commit  "

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.5882353)
layout_mode = 2
text = "Last Commit: 0.0.3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Auto Increment Patch"

[node name="CheckBox2" type="CheckBox" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Auto Commit"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "  Reset  "
